tooling/nargo_cli/tests/snapshots/execution_success/signed_div/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct SignedDivOp {
    lhs: i8,
    rhs: i8,
    result: i8,
}

fn main(ops: [SignedDivOp; 15]) {
    for i in 0..15 {
        assert((ops[i].lhs / ops[i].rhs) == ops[i].result);
    }
}
